acvus-mir-test/tests/snapshots/e2e__sroa_context_destructure_then_overwrite.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = ref @a
     1 │   r1 = load r0
     2 │   r2 = ref @b
     3 │   r3 = load r2
     4 │   r4 = ref @b
     5 │   r5 = r3.x
     6 │   r6 = ref @a
     7 │   store r6 = r5
     9 │   r7 = ref @a
    10 │   store r7 = 0 (r8)
    11 │   r9 = ref @a
    12 │   return 0 (r8)

    ; r0 (@a) : Ref<Int>
    ; r1 (@a) : Int
    ; r2 (@b) : Ref<{x: Int}>
    ; r3 (@b) : {x: Int}
    ; r4 (v12) : Ref<{x: Int}>
    ; r5 (v6) : Int
    ; r6 (@a) : Ref<Int>
    ; r7 (@a) : Ref<Int>
    ; r8 (v8) : Int
    ; r9 (@a) : Ref<Int>
    ; r10 (v11) : Int
    ; r11 (v13) : {x: Int}
    ; r12 (@b.x) : Ref<Int>
