acvus-mir-test/tests/snapshots/e2e__sroa_context_field_read_2depth.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = ref @obj
     1 │   r1 = load r0
     2 │   r2 = ref @obj
     3 │   r3 = r1.a
     4 │   r4 = r3.b
     5 │   r5 = call #0(r4)
     6 │   return r5

    ; r0 (@obj) : Ref<{a: {b: Int}}>
    ; r1 (@obj) : {a: {b: Int}}
    ; r2 (v7) : Ref<{a: {b: Int}}>
    ; r3 (v4) : {b: Int}
    ; r4 (b) : Int
    ; r5 (to_string(...)) : String
    ; r6 (@obj.a) : Ref<{b: Int}>
    ; r7 (v8) : {a: {b: Int}}
