acvus-mir-test/tests/snapshots/e2e__sroa_context_field_read_3depth.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = ref @obj
     1 │   r1 = load r0
     2 │   r2 = ref @obj
     3 │   r3 = r1.a.b.c
     4 │   r4 = call #0(r3)
     5 │   return r4

    ; r0 (@obj) : Ref<{a: {b: {c: Int}}}>
    ; r1 (@obj) : {a: {b: {c: Int}}}
    ; r2 (v6) : Ref<{a: {b: {c: Int}}}>
    ; r3 (v4) : Int
    ; r4 (to_string(...)) : String
    ; r5 (@obj.a.b.c) : Ref<Int>
    ; r6 (v7) : {a: {b: {c: Int}}}
