acvus-mir-test/tests/snapshots/e2e__sroa_field_read_arithmetic.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = ref @obj
     1 │   r1 = load r0
     2 │   r2 = ref @obj
     3 │   r3 = r1.val
     5 │   r4 = r3 + 1 (r5)
     6 │   return r4

    ; r0 (@obj) : Ref<{val: Int}>
    ; r1 (@obj) : {val: Int}
    ; r2 (v7) : Ref<{val: Int}>
    ; r3 (v4) : Int
    ; r4 (v6) : Int
    ; r5 (v5) : Int
    ; r6 (@obj.val) : Ref<Int>
    ; r7 (v8) : {val: Int}
